# icrc-factory

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
.github/actions/prepare/: action.yml
.github/workflows/: checks.yml  tests.yml
scripts/: build.factory.sh  build.index.args.sh  build.ledger.args.sh  check-pricing  check.canister.installed.sh  did.sh  generate.sh  icrc-factory.args.did  lint.did.sh  lint.rust.sh  lint.sh
src/icrc-factory/: Cargo.toml  icrc-factory.did  oisy-points-backend.did
src/icrc-factory/src/: canister.rs  generic.rs  guards.rs  index.rs  ledger.rs  lib.rs  methods.rs  mgmt.rs  state.rs  user_canister.rs  wasm.rs
src/icrc-factory/src/types/: candid.rs  config.rs  memory.rs  mod.rs  stored_principal.rs  user_canister.rs
src/icrc-factory/src/types/args/: create_canister.rs
src/icrc-factory/src/types/ledger_suite/: common.rs  init_args.rs  mod.rs  upgrade_args.rs
src/icrc-factory/src/types/ledger_suite/index/: init_args.rs  mod.rs  upgrade_args.rs
src/icrc-factory/src/types/ledger_suite/ledger/: init_args.rs  upgrade_args.rs
src/icrc-factory/src/types/results/: create_canister.rs  mod.rs  set_wasm.rs
src/icrc-factory/src/wasm/: index_wasm.rs  ledger_wasm.rs  mod.rs  utils.rs  wasm.rs
src/icrc-factory/tests/it/: config.rs
src/icrc-factory/tests/it/utils/: mock.rs  pocketic.rs
src/icrc-factory/tests/it/utils/pocketic/: pic_canister.rs
