[workspace]
members = [
    "src/icrc-factory"
]
resolver = "2"

[workspace.dependencies]
ic-cdk = "0.17.2"
candid = "0.10"
icrc-ledger-types = "0.1.11"
ic-cdk-timers = "0.11"
serde = "1.0"
ic-stable-structures = "0.7.2"
serde_bytes = "0.11"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
struct_field_names = "allow"
