[workspace]
members = [
    "src/icrc-factory"
]
resolver = "2"

[workspace.dependencies]
ic-cdk = "0.17.2"
candid = "0.10"
ic-papi-api = { git = "https://github.com/dfinity/papi", rev = "43c42fa2ea5f3d23d81360749deb58a29450c237" }
ic-papi-guard = { git = "https://github.com/dfinity/papi", rev = "43c42fa2ea5f3d23d81360749deb58a29450c237" }
icrc-ledger-types = "0.1.11"
lazy_static = "1.5.0"
ic-cdk-timers = "0.11"
serde = "1.0"
ic-stable-structures = "0.7.2"
# dfx 0.26.0 bundles pocket-ic server 8.0 which uses pocket-ic library 7.0
# See:
# Server version: ~/.cache/dfinity/versions/0.26.0/pocket-ic --version
# Library version: https://docs.google.com/document/d/1VYmHUTjrgbzRHtsAyRrI5cj-gWGs7ktTnutPvUMJioU/edit?pli=1&tab=t.0#heading=h.5wf28dvt742x
pocket-ic = "7.0"
serde_bytes = "0.11"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
struct_field_names = "allow"
